not found page and page loader have been added

--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -2,5 +2,6 @@
   "translate": "Перекладсти",
   "main": "Головна",
   "about": "Про нас",
-  "language": "Мова"
+  "language": "Мова",
+  "notFoundPage": "Сторінка не знайдена"
 }
