--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "translate": "Translate",
   "main": "Main",
   "about": "About",
-  "language": "Language"
+  "language": "Language",
+  "notFoundPage": "Page not found"
 }
