--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -5,5 +5,6 @@
   "language": "Мова",
   "notFoundPage": "Сторінка не знайдена",
   "errorBoundaryText": "Щось пішло не так.",
-  "errorBoundaryButton": "Оновити сторінку"
+  "errorBoundaryButton": "Оновити сторінку",
+  "toggle": "Перемкнути"
 }
