--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "notFoundPage": "Page not found",
   "errorBoundaryText": "Something went wrong.",
   "errorBoundaryButton": "Reload page",
-  "toggle": "Toggle"
+  "toggle": "Toggle",
+  "shortLng": "EN"
 }
